feat: release AVS v1.5.3
